--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
+		"predeploy": "pnpm run build",
 		"deploy": "wrangler deploy",
 		"dev": "wrangler dev",
-		"start": "wrangler dev"
+		"start": "wrangler dev",
+		"build": "vite build"
 	},
 	"devDependencies": {
-		"wrangler": "^4.24.3"
+		"@tsconfig/strictest": "2.0.5",
+		"typescript": "5.8.3",
+		"vite": "7.0.4",
+		"wrangler": "4.24.3"
 	}
 }
