--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
 	},
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "1.9.4",
+		"@preact/preset-vite": "2.10.2",
 		"@tsconfig/strictest": "2.0.5",
 		"typescript": "5.8.3",
 		"vite": "7.0.4",
 		"wrangler": "4.24.3"
+	},
+	"dependencies": {
+		"preact": "10.26.9",
+		"react": "npm:@preact/compat@18.3.1",
+		"react-dom": "npm:@preact/compat@18.3.1"
 	}
 }
