--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "@tsconfig/strictest/tsconfig.json",
+  "compilerOptions": {
+    "jsx": "react-jsx",
+		"jsxImportSource": "preact"
+  },
   "include": ["src", "vite.config.ts"],
 }
