--- a/package.json
+++ b/package.json
@@ -12,17 +12,28 @@
 	},
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "1.9.4",
-		"@preact/preset-vite": "2.10.2",
 		"@tailwindcss/vite": "4.1.11",
 		"@tsconfig/strictest": "2.0.5",
+		"@types/node": "24.0.13",
 		"tailwindcss": "4.1.11",
+		"tw-animate-css": "1.3.5",
 		"typescript": "5.8.3",
 		"vite": "7.0.4",
 		"wrangler": "4.24.3"
 	},
 	"dependencies": {
-		"preact": "10.26.9",
-		"react": "npm:@preact/compat@18.3.1",
-		"react-dom": "npm:@preact/compat@18.3.1"
+		"@radix-ui/react-dialog": "1.1.14",
+		"@radix-ui/react-label": "2.1.7",
+		"@radix-ui/react-select": "2.2.5",
+		"@radix-ui/react-slot": "1.2.3",
+		"@types/react": "19.1.8",
+		"@types/react-dom": "19.1.6",
+		"@vitejs/plugin-react-swc": "3.10.2",
+		"class-variance-authority": "0.7.1",
+		"clsx": "2.1.1",
+		"lucide-react": "0.525.0",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"tailwind-merge": "3.3.1"
 	}
 }
