--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,12 @@
   "extends": "@tsconfig/strictest/tsconfig.json",
   "compilerOptions": {
     "jsx": "react-jsx",
-		"jsxImportSource": "preact",
     "moduleResolution": "bundler",
-    "module": "esnext"
+    "module": "esnext",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src", "vite.config.ts"],
 }
