--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"lucide-react": "0.525.0",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
-		"tailwind-merge": "3.3.1"
+		"tailwind-merge": "3.3.1",
+		"usehooks-ts": "3.1.1"
 	}
 }
